Updates from ShareLaTeX

--- a/indexed/02.tex
+++ b/indexed/02.tex
@@ -281,7 +281,7 @@ After covering the basics, 5 practice sessions followed in the subsequent weeks,
 
 Data collection took place in the \textit{Translation and Cognition Centre} of the University of Mainz\slash Germersheim. The test subjects were briefed about the structure of the study and were informed that they were going to interpret 3 speeches from \ili{English} into their mother tongue. They were told the topic of the speeches (renewables and other sources of energy) right before data collection started. While this does not reflect professional practice, which requires thorough preparation before interpretation proper, the students were not given the chance to prepare in advance since this would have introduced an additional variable in the study. The methods of preparation and the time dedicated to this fundamental phase of interpreting are very personal and would have been very difficult to standardize and to verify. I therefore decided to sacrifice some ecological validity to limit the number of independent variables.
 
-Every test subject interpreted 3 speeches, each about 12 minutes long and with an average speed of 122.26 words per minute. This speed was chosen to make sure that looking up \isi{terminology} during interpreting was challenging, but not impossible. All three speeches had been prepared ad-hoc for the study and previously recorded by a native speaker of \ili{British} \ili{English}. One \isi{glossary} of 421 terms was prepared by the author. It contained the same terms for both language combinations and had a simple tabular structure – one column for the \isi{source language} and one for the \isi{target language}. The \isi{glossary} was prepared with \isi{InterpretBank} and then exported as an Excel \isi{spreadsheet}, which was then also converted into a Word table. The glossaries were not shown to the test subjects before the interpreting task started. During the interpreting task, the screen was divided in two areas. On the left-hand side, the test subjects could see the video of the speaker, which served as a fixation cross when no term query was being performed. The \isi{glossary} window was placed on the right-hand side of the screen.
+Every test subject interpreted 3 speeches, each about 12 minutes long and with an average speed of 122.26 words per minute. This speed was chosen to make sure that looking up \isi{terminology} during interpreting was challenging, but not impossible. All three speeches had been prepared ad-hoc for the study and previously recorded by a native speaker of British \ili{English}. One \isi{glossary} of 421 terms was prepared by the author. It contained the same terms for both language combinations and had a simple tabular structure – one column for the \isi{source language} and one for the \isi{target language}. The \isi{glossary} was prepared with \isi{InterpretBank} and then exported as an Excel \isi{spreadsheet}, which was then also converted into a Word table. The glossaries were not shown to the test subjects before the interpreting task started. During the interpreting task, the screen was divided in two areas. On the left-hand side, the test subjects could see the video of the speaker, which served as a fixation cross when no term query was being performed. The \isi{glossary} window was placed on the right-hand side of the screen.
 
 The test subjects’ deliveries were recorded with Audacity, while an \textsc{smi\linebreak red250m} eye-tracker was used to record eye movements. A \textsc{log} file, automatically created by \isi{InterpretBank}, served as a reference to check what terms had been looked up by the test subjects. The same was done manually for the trials in which Word and Excel were adopted, using the Gaze Replay recordings. The interpretations were then transcribed using Partitur Editor, the transcription tool of the Exmaralda suite, and then analyzed. Before presenting the method used for this analysis and its results in \sectref{sec:prandi:5}, I will describe the main features of the speeches used for data collection, with a focus on stimuli distribution and \isi{morphological complexity}.
 
