--- a/indexed/04.tex
+++ b/indexed/04.tex
@@ -30,7 +30,7 @@ The use of \textsc{vci} \isi{equipment} in a legal setting was examined as early
 
 In \isi{multilingual} settings, studies on the use of \textsc{vci} \isi{equipment} form part of a relatively new research area, which has been primarily examined within the realm of the \isi{Avidicus} projects. This research investigates the use of \textsc{vci} and Remote Interpreting (\textsc{ri}) in various legal settings such as criminal courtrooms and police stations across Europe. They also offer training guidelines and recommendations to various legal stakeholders. Their studies are quite far reaching, and some of their findings confirm those in a \isi{monolingual setting}. For instance, \isi{Avidicus} 1 reveals that it is more difficult to establish a rapport with the participants on the other side of the screen \citep{Rombouts2011}. It also demonstrates that \textsc{vci} requires more \isi{synchronisation} in terms of interaction and turn-taking, and it is more conducive to overlapping turns and artificial pauses \citep{Balogh2011}. Furthermore, interpreters reported that they found it more stressful, isolating, and tiring \citep{Miler-Cassino2011}. In a bid to further explore the impact of \textsc{vci} in a legal setting, \isi{Avidicus} 2 establishes a list of interrelated factors that affect \isi{interpreting quality} and a list of strategies developed by interpreters. It also offers some strategies to interpreters to overcome issues relating to the use of \textsc{vci}. Finally, \isi{Avidicus} 3 takes stock of the use of \textsc{vci} \isi{equipment} in twelve European countries and, for each of them, the findings are thematised under nine areas: procurement, \isi{equipment} and maintenance, uses, participant distribution, pre-\textsc{vc}/post-\textsc{vc}, mode of interpreting, \textsc{vci} management communication management, and working arrangements. According to \citet{Braun2016a}, it transpires that in England and Wales there are various \textsc{vci} \isi{equipment} suppliers operating, and \textsc{vci} \isi{equipment} is fitted within existing courtrooms, which can dictate the position of the screen and cameras. These set-ups can lead to various potential layouts and create different constraints. Furthermore, \textsc{vci} hearings tend to be rather short, and are characterised by a lack of pre-briefing and debriefing sessions. Finally, the \isi{interpreter} works mainly in consecutive mode, and the issue of rapport building with remote participants are further highlighted. 
 
-Other studies have been conducted in the area of \textsc{vci}-mediated legal interpreting outside the realm of the \isi{Avidicus} projects. For instance, \citet{Ellis2004} examines the fairness of its use in refugee hearings in Canada. This report confirms that the use of \textsc{vci} leads to a more impersonal means of communication, and it also highlights technical issues regarding poor audio and \isi{video quality}. Similar conclusions are reported in the Bail for Immigration Detainees and the \ili{British} Refugee \citegen{Bail2008}, and it also reveals that the use of \textsc{vci} \isi{equipment} distorts \isi{body language} in immigration hearings. Furthermore, in \ili{English} criminal courts, \citet{Fowler2012} examines the use of \isi{equipment}, the \isi{interpreter}’s working conditions, and the \isi{interaction management}. Her studies show that the \isi{interpreter} is a more visible \isi{court actor} when \textsc{vci} \isi{equipment} is used. Finally, in a recent study \citet{Devaux2017a}, I investigated the \isi{interpreter}’s ethical rationalisation process and argued that interpreters rationalise ethical dilemmas mainly through their codes of ethics. However, specific ethical issues arise in \textsc{vci a} and/or \textsc{vci b}, for which other ethical paradigms, such as consequentialism or virtue ethics, need to be considered. 
+Other studies have been conducted in the area of \textsc{vci}-mediated legal interpreting outside the realm of the \isi{Avidicus} projects. For instance, \citet{Ellis2004} examines the fairness of its use in refugee hearings in Canada. This report confirms that the use of \textsc{vci} leads to a more impersonal means of communication, and it also highlights technical issues regarding poor audio and \isi{video quality}. Similar conclusions are reported in the Bail for Immigration Detainees and the British Refugee \citegen{Bail2008}, and it also reveals that the use of \textsc{vci} \isi{equipment} distorts \isi{body language} in immigration hearings. Furthermore, in \ili{English} criminal courts, \citet{Fowler2012} examines the use of \isi{equipment}, the \isi{interpreter}’s working conditions, and the \isi{interaction management}. Her studies show that the \isi{interpreter} is a more visible \isi{court actor} when \textsc{vci} \isi{equipment} is used. Finally, in a recent study \citet{Devaux2017a}, I investigated the \isi{interpreter}’s ethical rationalisation process and argued that interpreters rationalise ethical dilemmas mainly through their codes of ethics. However, specific ethical issues arise in \textsc{vci a} and/or \textsc{vci b}, for which other ethical paradigms, such as consequentialism or virtue ethics, need to be considered. 
 
 Overall, research carried out in \textsc{vci} tends to focus on various paradigms that evolve around the use of \textsc{vci} \isi{equipment} and its impact on the interaction. Results show that there are similar difficulties in a mono- or \isi{multilingual} context, be it related to technical difficulties or \isi{interaction management}. Interestingly, the legality concerning the use of \textsc{vci} is not as prominent a research area as it is in \isi{monolingual} settings. Based on the literature review, it is also striking that the \isi{court interpreter}’s role in \textsc{vci} is an underexplored research area, especially as this theme has been studied widely in various face-to-face contexts. 
 
