--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 % 		,draft
 %                 ,draftmode
                 ,arseneau
-		,showindex
+% 		,showindex
 	      % ,multiauthors
 	      % ,nobabel
 		  ]{langsci/langscibook}                              
