last changes to index

--- a/indexed/00.tex
+++ b/indexed/00.tex
@@ -43,7 +43,7 @@ Currently, interpreting might be on the verge of a third breakthrough which I wi
 \section{Interpreting-related technologies} 
 There are three main areas that will play a central role in this \isi{technological turn}: computer-assisted (\textsc{cai}), remote (\textsc{ri}), and machine interpreting (\textsc{mi}). 
  
-\isi{Computer-assisted interpreting} can be defined as a form of oral translation in which a \isi{human interpreter} makes use of computer software designed to support and facilitate some aspects of the interpreting task with the goal to increase quality and -- to a minor extend -- productivity \citep{Fantinuoli2018}. Among others, \textsc{cai} tools are designed to assist interpreters in the creation of glossaries by means of integrating a wide range of \isi{terminology} resources, in looking up terms or entities in an ergonomic way, and in extracting useful information from preparatory documents, to name but a few. They can make use of advanced Natural Language Process features, such as automatic \isi{terminology} extraction, key topics identification, summarization, automatic \isi{speech recognition}, and so forth.\footnote{For some examples of advanced use of Natural Language Processing applications in \textsc{cai} tools, see 
+\is{computer-assisted interpreting}Computer-assisted interpreting can be defined as a form of oral translation in which a \isi{human interpreter} makes use of computer software designed to support and facilitate some aspects of the interpreting task with the goal to increase quality and -- to a minor extend -- productivity \citep{Fantinuoli2018}. Among others, \textsc{cai} tools are designed to assist interpreters in the creation of glossaries by means of integrating a wide range of \isi{terminology} resources, in looking up terms or entities in an ergonomic way, and in extracting useful information from preparatory documents, to name but a few. They can make use of advanced Natural Language Process features, such as automatic \isi{terminology} extraction, key topics identification, summarization, automatic \isi{speech recognition}, and so forth.\footnote{For some examples of advanced use of Natural Language Processing applications in \textsc{cai} tools, see 
 % \citeauthor{fantinuoli_speech_2017} (\citeyear{fantinuoli_speech_2017}
 \citet{Fantinuoli2017b}
 and \citet{stewart_automatic_2018}.} 
