--- a/indexed/02.tex
+++ b/indexed/02.tex
@@ -16,7 +16,7 @@ Over the past few years, terminology management tools have been developed\linebr
 
 
 \section{Introduction}\label{sec:prandi:1}
-\isi{Computer-assisted interpreting} (\textsc{cai}) emerged around 10 years ago to provide interpreters with tools to prepare for specialized events and to support them along the individual phases of their workflow, from preparation, to interpretation proper, to follow-up work after the assignment. \textsc{cai} tools thus rationalize the interpret\-er’s \isi{terminology} work by making preparation more efficient and ultimately aim at improving the quality of the \isi{interpreter}’s output, at least in terms of \isi{terminological precision} and adequacy. \citet{Rütten2007} and \citet{Will2009} developed a theoretical model of the \isi{interpreter}’s preparation work and laid the foundations for how a \textsc{cai} tool should be structured in order to address the specific needs of conference interpreters, which are mainly linked to the online nature of interpreting and the time constraints it entails.
+\is{computer-assisted interpreting}Computer-assisted interpreting (\textsc{cai}) emerged around 10 years ago to provide interpreters with tools to prepare for specialized events and to support them along the individual phases of their workflow, from preparation, to interpretation proper, to follow-up work after the assignment. \textsc{cai} tools thus rationalize the interpret\-er’s \isi{terminology} work by making preparation more efficient and ultimately aim at improving the quality of the \isi{interpreter}’s output, at least in terms of \isi{terminological precision} and adequacy. \citet{Rütten2007} and \citet{Will2009} developed a theoretical model of the \isi{interpreter}’s preparation work and laid the foundations for how a \textsc{cai} tool should be structured in order to address the specific needs of conference interpreters, which are mainly linked to the online nature of interpreting and the time constraints it entails.
 
 To date, the number of \textsc{cai} tools available to interpreters is limited and their functionalities do not always cover all the phases of the \isi{interpreting process}. \citet{Fantinuoli2018} distinguishes between first-generation and second-generation \textsc{cai} tools. The first (e.g. Interplex\footnote{\url{http://www.fourwillows.com/interplex.html}} and Terminus\footnote{\url{http://www.wintringham.ch/cgi/ayawp.pl?T=terminus}}) are ``designed to manage \isi{multilingual} glossaries in an interpreter-friendly manner'' \citep[164]{Fantinuoli2018}, but do not offer an \isi{advanced search} algorithm. The latter ``offer advanced functionalities that go beyond basic \isi{terminology management}, such as features to organize textual material, retrieve information from corpora or other resources, learn conceptualized domains, and \isi{advanced search} functions'' \citep[164]{Fantinuoli2018} and include Intragloss\footnote{\url{http://intragloss.com}} and \isi{InterpretBank}\footnote{\url{http://www.interpretbank.com}}. Interpreter’s Help\footnote{\url{https://interpretershelp.com}} can also be considered a second-generation \textsc{cai} tool, as it implements an \isi{advanced search} function through its companion tool Boothmate\footnote{\url{https://interpretershelp.com/boothmate}}. 
 
